--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ header a {
     text-transform: uppercase;
 }
 
+header .mobile {
+    display: none;
+}
+
 header .logo a {
     background-image: url("ProjectHCLogo.png");
     background-size: 100px;
@@ -66,6 +70,22 @@ li:hover {
     background-color: #45A29E;
 }
 
+/* Responsive */
+
+@media screen and (max-width: 601px) {
+    header {
+        height: 200px;
+    }
+
+    header .mobile {
+        display: inline-block
+    }
+    
+    header .desktop {
+        display: none;
+    }
+}
+
 /* Features */
 
 .feature {
@@ -73,7 +93,8 @@ li:hover {
     color: #C5C6C7;
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    flex-wrap: wrap;
+    padding: 30px;
 }
 
 .feature figure {
@@ -86,7 +107,6 @@ li:hover {
 .feature button {
     background: #0B0C10;
     border: none;
-    border-radius: 50%;
     
 }
 
@@ -96,10 +116,17 @@ li:hover {
 
 .feature figure img {
     border: 1px solid #1f2833;
-    border-radius: 50%;
     box-shadow: #C5C6C7 0 0 5px;
     width: 200px;
 }
+
+/* Responsive 
+
+@media screen and (max-width: 710px) {
+    .features {
+        display: block;
+    }
+}*/
 
 /* Footer */
 
@@ -110,57 +137,5 @@ footer {
     text-align: center;
 }
 
-/*header {
-    margin: 0;
-    color:#66FCF1;
-    padding: 10px 15px 0px 15px;
-}
+/* Responsive */
 
-header h1 {
-    margin: 0;
-    display: inline;
-}
-
-nav ul {
-    margin: 0;
-    display: inline;
-    padding: 0 0 0 15px;
-}
-
-nav ul li {
-    color: #C5C6C7;
-    background: #45A29E;
-    display: inline-block;
-    list-style-type: none;
-    margin: 0;
-    border-radius: 10px;
-}
-
-nav ul li button {
-    background: #45A29E;
-    color: #C5C6C7;
-}
-
-nav ul li a {
-    color: #C5C6C7;
-    margin: 0;
-}
-
-.row {
-    clear: both;
-}
-
-.col{
-    background: #333;
-    border-radius: 5px;
-    color: white;
-    padding: 10px .5%;    
-    float: left;
-    margin: .5%;
-    width: 31%;
-}
-
-p, a {
-    color: #C5C6C7;
-    margin: 0;
-}*/
