--- a/main.css
+++ b/main.css
@@ -104,14 +104,8 @@ li:hover {
     text-transform: uppercase;
 }
 
-.feature button {
-    background: #0B0C10;
-    border: none;
-    
-}
+.sam1:hover {
 
-.feature button:hover {
-    background-color: #66FCF1;
 }
 
 .feature figure img {
