--- a/main.css
+++ b/main.css
@@ -1,12 +1,13 @@
 body {
     background:#0B0C10;
     color: #C5C6C7;
-    font-family: arial;
+    font-family: Oswald, Roboto Condensed, arial;
     margin: 0;
     padding: 0;
 }
 
 /* Header */
+
 
 header {
     background: #0B0C10;
@@ -19,10 +20,18 @@ header {
 }
 
 header a {
-    color: #C5C6C7;
     margin-top: 40px;
     text-decoration: none;
     text-transform: uppercase;
+    color: #C5C6C7
+}
+
+header a:hover { 
+    background-color: #45A29E;
+    color: white;
+    padding: 2px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 header .mobile {
@@ -64,11 +73,9 @@ li {
     margin-right: 20px;
     padding: 2px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
-li:hover {
-    background-color: #45A29E;
-}
 
 /* Responsive */
 
