--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     background:#0B0C10;
     color: #C5C6C7;
-    font-family: Oswald, Roboto Condensed, arial;
+    font-family: Roboto, arial;
     margin: 0;
     padding: 0;
 }
@@ -64,8 +64,9 @@ div {
 
 ul {
     margin: 0;
-    padding: 0;
+    padding: 0px;
     list-style-type: none;
+    
 }
 
 li {
