--- a/main.css
+++ b/main.css
@@ -1,143 +1,34 @@
 body {
-    background:#0B0C10;
-    color: #C5C6C7;
-    font-family: Roboto, arial;
+    background:#0C243C;
+    color: white;
+    font-family: Arial;
     margin: 0;
     padding: 0;
 }
 
 /* Header */
 
-
 header {
-    background: #0B0C10;
-    background-image: url("difcodesnip.jpg");
-    background-size: 100%;
-    background-position: center;
-    height: 400px;
-    padding: 20px;
-    text-align: center;
-}
-
-header a {
-    margin-top: 40px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #C5C6C7
-}
-
-header a:hover { 
-    background-color: #45A29E;
-    color: white;
-    padding: 2px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-header .mobile {
-    display: none;
-}
-
-header .logo a {
-    background-image: url("ProjectHCLogo.png");
-    background-size: 100px;
-    background-repeat: no-repeat;
+    display: inline;
     display: inline-block;
-    height: 100px;
+}
+
+.name-head{
+    width: 508px;
+    height: 264px;
+    margin-top: 50px;
+    margin-left: 100px;
+}
+.logo-head{
+    display: inline-block;
+}
+
+.head-name {
+    display: inline-block;
     position: relative;
-    text-indent: -999999px;
-    top: -40px;
-    width: 100px;
-}
-
-section {
-    background: white;
-    display: flex;
-    flex-direction: row;
-}
-
-div {
-    background: red;
-    margin: auto;
-    width: 100px;
-}
-
-ul {
-    margin: 0;
-    padding: 0px;
-    list-style-type: none;
-    
-}
-
-li {
-    display: inline-block;
-    margin-right: 20px;
-    padding: 2px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-
-/* Responsive */
-
-@media screen and (max-width: 601px) {
-    header {
-        height: 200px;
-    }
-
-    header .mobile {
-        display: inline-block
-    }
-    
-    header .desktop {
-        display: none;
-    }
-}
-
-/* Features */
-
-.feature {
-    background: #0B0C10;
-    color: #C5C6C7;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 30px;
-}
-
-.feature figure {
-    margin: auto;
-    text-align: center;
-    width: 200px;
+    bottom: 54px;
     text-transform: uppercase;
+    font-size: xxx-large;
+    font-family: Oswald;
 }
-
-.sam1:hover {
-
-}
-
-.feature figure img {
-    border: 1px solid #1f2833;
-    box-shadow: #C5C6C7 0 0 5px;
-    width: 200px;
-}
-
-/* Responsive 
-
-@media screen and (max-width: 710px) {
-    .features {
-        display: block;
-    }
-}*/
-
-/* Footer */
-
-footer {
-    background: black;
-    font-size: 12px;
-    padding: 20px;
-    text-align: center;
-}
-
-/* Responsive */
 
